# data_craft_frontend

./: README.md  components.d.ts  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
src/: App.vue  dataset.ts  index.css  main.ts  router.ts  theme.ts
src/components/ListPage/: TableComponent.vue  ToolbarComponent.vue
src/components/TablePage/: ActiveButtons.vue  EditRow.vue  Statistic.vue  TableComponent.vue
src/components/core/: ContentContainer.vue  HeaderComponent.vue  MainContainer.vue  Navbar.vue  ToolbarComponent.vue
src/components/dialogs/: FieldEditDialog.vue  FilterDialog.vue
src/components/popovers/: NumberFieldPopover.vue  TextFieldPopover.vue
src/pages/: DatasetColumnsPage.vue  DatasetDashboardPage.vue  DatasetFieldsPage.vue  DatasetListPage.vue  DatasetTablePage.vue
src/stores/: active-dataset-store.ts  dashboard-store.ts  dataset-store.ts  datasets-store.ts  db-store.ts
wasm_core/: Cargo.toml
wasm_core/pkg/: data_craft_core.d.ts  data_craft_core.js  data_craft_core_bg.js  data_craft_core_bg.wasm.d.ts  package.json
wasm_core/src/: dataset.rs  field.rs  lib.rs  utils.rs
