[package]
name = "data_craft_core"
version = "0.1.0"
authors = ["Arseny <arsuhinars@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
js-sys = "0.3.72"
web-sys = { version = "0.3.72", features = ["Window", "console"] }
polars = { version = "0.43.0", default-features = false, features = ["csv", "lazy", "dtype-date", "dtype-datetime", "dtype-time"] }
polars-lazy = { version = "0.43.1", features = ["is_in", "regex", "strings"], default-features = false }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
